Getting familiar with the codebase

--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,8 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                            <h1>Getting rewards got as easy as snapping a Selfie!</h1>
+                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Try It Now for Free!</a>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Enter all the competitions you can</h2>
+                        <p class="text-muted">Share competitions with your friends!</p>
                         <hr>
                     </div>
                 </div>
@@ -144,14 +144,14 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
+                                    <h3>Drive Football To Your Business</h3>
                                     <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
+                                    <h3>Engage Your Customers</h3>
                                     <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
                                 </div>
                             </div>
@@ -160,14 +160,30 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
+                                    <h3>Highten Your Brand Recognition</h3>
                                     <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
+                                    <h3>Increase Sales</h3>
+                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-present text-primary"></i>
+                                    <h3>Reach All Your Social Media Platforms</h3>
+                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-lock-open text-primary"></i>
+                                    <h3>Reach You Customers Directly</h3>
                                     <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
                                 </div>
                             </div>
@@ -181,7 +197,7 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
+                <h2>Are you Business or Consumer?</h2>
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
