Minor styling changes and added descriptor content

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,16 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Are you Business or Consumer?</h2>
+                <h2 class="text-center">WHO ARE YOU?</h2>
+                <div class="row">
+                    <h2 class="col-sm-6">BUSINESS</h2>
+                    <h2 class="col-sm-6 text-right">CONSUMER</h2>
+                </div>
+                <div class="row">
+                    <h4 class="col-sm-6 text-primary">How does it work?<br><br>XXX is based on audience engagement. You want more business and your normal social media ads aren't bringing in any customer engagement. We're changing that. In order to enter your ad campaign, your customers have to take a selfie with your product.
+<br><br>To get started... Select one of our easy-to-edit templates and add your promotion or competition.<br><br>Choose your budget and how long you want your ad to run for. Click done.<br><br>We'll review and publish your ad to your audience while you wait for the influx of business to roll in.</h4>
+                    <h4 class="col-sm-6 text-right text-primary">Businesses need you, and they're willing to give you free stuff just for taking a selfie.<br><br>Download the app and scroll through the campaigns going on around you and follow their instructions in your selfie to enter. </h4>
+                </div>                    
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
